// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insight-engine baseline (sales + metas, no inventory) > activates meta_gap_temporal but keeps inventory_stock silent 1`] = `
{
  "datasetShape": {
    "inventory": 0,
    "metas": 2340,
    "sales": 94838,
  },
  "engineStatus": {
    "candidatesSelected": 18,
    "candidatesTotal": 317,
    "origins": {
      "cross_engine": 1,
      "executive_compression": 0,
      "legacy_render_adapter": 0,
      "motor1_legacy": 0,
      "motor2_registry_loop": 110,
      "special_builder": 206,
      "unknown": 0,
    },
  },
  "poolAfterFilter": {
    "passRate": 0.667,
    "total": 12,
  },
  "poolReturnedByEngine": {
    "byInsightType": {
      "cliente_dormido": 1,
      "cliente_perdido": 1,
      "co_decline": 1,
      "contribution": 1,
      "cross_delta": 2,
      "meta_gap": 6,
      "meta_gap_temporal": 2,
      "migration": 2,
      "outlier": 1,
      "product_dead": 1,
    },
    "total": 18,
  },
  "specialBuilderOutputs": {
    "change_point": 68,
    "cliente_dormido": 1,
    "cliente_perdido": 1,
    "co_decline": 1,
    "correlation": 0,
    "cross_delta": 75,
    "inventory_stock": 0,
    "meta_gap_combo": 47,
    "meta_gap_temporal": 3,
    "migration": 1,
    "outlier_builder": 4,
    "product_dead": 1,
    "steady_share": 4,
  },
}
`;

exports[`insight-engine baseline (sales only, no metas no inventory) > runs cleanly and inventory/meta builders emit 0 candidates 1`] = `
{
  "datasetShape": {
    "inventory": 0,
    "metas": 0,
    "sales": 94838,
  },
  "engineStatus": {
    "candidatesSelected": 14,
    "candidatesTotal": 267,
    "origins": {
      "cross_engine": 1,
      "executive_compression": 0,
      "legacy_render_adapter": 0,
      "motor1_legacy": 0,
      "motor2_registry_loop": 110,
      "special_builder": 156,
      "unknown": 0,
    },
  },
  "poolAfterFilter": {
    "passRate": 0.643,
    "total": 9,
  },
  "poolReturnedByEngine": {
    "byInsightType": {
      "change": 1,
      "cliente_dormido": 1,
      "cliente_perdido": 1,
      "co_decline": 1,
      "contribution": 2,
      "cross_delta": 2,
      "migration": 2,
      "outlier": 1,
      "product_dead": 1,
      "trend": 2,
    },
    "total": 14,
  },
  "specialBuilderOutputs": {
    "change_point": 68,
    "cliente_dormido": 1,
    "cliente_perdido": 1,
    "co_decline": 1,
    "correlation": 0,
    "cross_delta": 75,
    "inventory_stock": 0,
    "meta_gap_combo": 0,
    "meta_gap_temporal": 0,
    "migration": 1,
    "outlier_builder": 4,
    "product_dead": 1,
    "steady_share": 4,
  },
}
`;

exports[`insight-engine golden master (demo dataset, UDS) > produces stable structural output for demo dataset 1`] = `
{
  "rows": [
    {
      "dimensionId": "cliente",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 819,
      "insightTypeId": "cliente_perdido",
      "member": "Tienda El Progreso",
      "metricId": "dias_sin_compra",
      "rank": 1,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "ALTA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "cliente",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 1633,
      "insightTypeId": "cliente_dormido",
      "member": "Supermercado López",
      "metricId": "dias_sin_compra",
      "rank": 2,
      "root_problem_key": null,
      "scoreRounded": 0.75,
      "severity": "MEDIA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 35648,
      "insightTypeId": "meta_gap_temporal",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 3,
      "root_problem_key": null,
      "scoreRounded": 0.2301,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 17123,
      "insightTypeId": "meta_gap_temporal",
      "member": "Luis Hernández",
      "metricId": "cumplimiento_meta",
      "rank": 4,
      "root_problem_key": null,
      "scoreRounded": 0.0954,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "categoria",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Lácteos",
      "metricId": "cumplimiento_meta",
      "rank": 5,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Roberto Cruz",
      "metricId": "cumplimiento_meta",
      "rank": 6,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 7567,
      "insightTypeId": "product_dead",
      "member": "Cacahuates 100g",
      "metricId": "venta",
      "rank": 7,
      "root_problem_key": null,
      "scoreRounded": 0.6,
      "severity": "MEDIA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "producto",
      "direction": "neutral",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 7836,
      "insightTypeId": "stock_excess",
      "member": "Cacahuates 100g",
      "metricId": "inventario",
      "rank": 8,
      "root_problem_key": null,
      "scoreRounded": 0.7,
      "severity": "MEDIA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 7567,
      "insightTypeId": "co_decline",
      "member": "Palomitas 80g",
      "metricId": "venta",
      "rank": 9,
      "root_problem_key": null,
      "scoreRounded": 0.1513,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 12003,
      "insightTypeId": "stock_risk",
      "member": "Té Helado 500ml",
      "metricId": "inventario",
      "rank": 10,
      "root_problem_key": null,
      "scoreRounded": 0.4,
      "severity": "BAJA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.54,
      "impactoValorRounded": 346,
      "insightTypeId": "migration",
      "member": "Super Económico",
      "metricId": "venta",
      "rank": 11,
      "root_problem_key": null,
      "scoreRounded": 0.244,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.69,
      "impactoValorRounded": 46,
      "insightTypeId": "migration",
      "member": "Tienda El Carmen",
      "metricId": "num_transacciones",
      "rank": 12,
      "root_problem_key": null,
      "scoreRounded": 0.2659,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "departamento",
      "direction": "neutral",
      "hasAction": false,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "cross_delta",
      "member": "Santa Ana",
      "metricId": "venta",
      "rank": 13,
      "root_problem_key": null,
      "scoreRounded": 0.3807,
      "severity": "BAJA",
      "time_scope": "unknown",
    },
  ],
  "summary": {
    "datasetSize": {
      "inventory": 20,
      "metas": 2340,
      "sales": 94838,
    },
    "engineStatus": {
      "candidatesSelected": 20,
      "candidatesTotal": 298,
      "detectorsEmitted": {
        "change_point": 68,
        "correlation": 0,
        "meta_gap_temporal": 2,
        "motor1": 111,
        "outlier_builder": 4,
        "steady_share": 4,
        "z9_hydration": 23,
      },
      "origins": {
        "cross_engine": 1,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 104,
        "special_builder": 193,
        "unknown": 0,
      },
      "rankerAudit": {
        "portfolioPreview": [
          {
            "currentRank": 1,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
            "portfolioRank": 1,
            "portfolioScore": 0.656,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 2,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Luis Hernández",
            "portfolioRank": 7,
            "portfolioScore": 0.43,
            "reasons": [
              "economic_impact",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 3,
            "id": "special_builder:meta_gap:categoria:cumplimiento_meta:Lácteos",
            "portfolioRank": 2,
            "portfolioScore": 0.527,
            "reasons": [
              "economic_impact",
              "high_confidence",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 4,
            "id": "special_builder:meta_gap:categoria:cumplimiento_meta:Limpieza",
            "portfolioRank": 3,
            "portfolioScore": 0.521,
            "reasons": [
              "economic_impact",
              "high_confidence",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 5,
            "id": "special_builder:meta_gap:categoria:cumplimiento_meta:Refrescos",
            "portfolioRank": 5,
            "portfolioScore": 0.471,
            "reasons": [
              "economic_impact",
              "high_confidence",
              "actionable",
              "causal_context",
            ],
          },
        ],
        "protectedCount": 17,
        "regularCap": 6,
        "regularCount": 168,
        "regularSelected": 6,
        "selectedByOrigin": {
          "cross_engine": 0,
          "executive_compression": 0,
          "legacy_render_adapter": 0,
          "motor1_legacy": 0,
          "motor2_registry_loop": 5,
          "special_builder": 15,
          "unknown": 0,
        },
      },
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 108,
          "inputCount": 298,
          "outputCount": 190,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 104,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 167,
          "inputCount": 190,
          "outputCount": 23,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 1,
            },
            "cliente_perdido": {
              "output": 1,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 4509,
              "output": 75,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_combo": {
              "output": 34,
            },
            "meta_gap_temporal": {
              "output": 2,
            },
            "migration": {
              "output": 0,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 194,
          "reason": null,
          "status": "ok",
        },
      },
    },
    "poolAfterFilter": {
      "byDimension": {
        "categoria": 1,
        "cliente": 4,
        "departamento": 1,
        "producto": 4,
        "vendedor": 3,
      },
      "byInsightType": {
        "cliente_dormido": 1,
        "cliente_perdido": 1,
        "co_decline": 1,
        "cross_delta": 1,
        "meta_gap": 2,
        "meta_gap_temporal": 2,
        "migration": 2,
        "product_dead": 1,
        "stock_excess": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 3,
        "BAJA": 7,
        "MEDIA": 3,
      },
      "passRate": 0.65,
      "total": 13,
    },
    "poolReturnedByEngine": {
      "byDimension": {
        "categoria": 3,
        "cliente": 7,
        "departamento": 2,
        "producto": 4,
        "supervisor": 1,
        "vendedor": 3,
      },
      "byInsightType": {
        "change": 1,
        "cliente_dormido": 1,
        "cliente_perdido": 1,
        "co_decline": 1,
        "contribution": 1,
        "cross_delta": 2,
        "meta_gap": 4,
        "meta_gap_temporal": 2,
        "migration": 2,
        "outlier": 1,
        "product_dead": 1,
        "stock_excess": 1,
        "stock_risk": 1,
        "trend": 1,
      },
      "bySeverity": {
        "ALTA": 7,
        "BAJA": 7,
        "CRITICA": 1,
        "MEDIA": 5,
      },
      "total": 20,
    },
    "runtimeAudit": {
      "origins": {
        "cross_engine": 0,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 5,
        "special_builder": 15,
        "unknown": 0,
      },
      "portfolioPreview": [
        {
          "currentRank": 1,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
          "portfolioRank": 1,
          "portfolioScore": 0.656,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 2,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Luis Hernández",
          "portfolioRank": 7,
          "portfolioScore": 0.43,
          "reasons": [
            "economic_impact",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 3,
          "id": "special_builder:meta_gap:categoria:cumplimiento_meta:Lácteos",
          "portfolioRank": 2,
          "portfolioScore": 0.527,
          "reasons": [
            "economic_impact",
            "high_confidence",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 4,
          "id": "special_builder:meta_gap:categoria:cumplimiento_meta:Limpieza",
          "portfolioRank": 3,
          "portfolioScore": 0.521,
          "reasons": [
            "economic_impact",
            "high_confidence",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 5,
          "id": "special_builder:meta_gap:categoria:cumplimiento_meta:Refrescos",
          "portfolioRank": 5,
          "portfolioScore": 0.471,
          "reasons": [
            "economic_impact",
            "high_confidence",
            "actionable",
            "causal_context",
          ],
        },
      ],
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 108,
          "inputCount": 298,
          "outputCount": 190,
          "reason": null,
          "status": "ok",
        },
        "executive_compression": {
          "discardedCount": null,
          "inputCount": 13,
          "outputCount": 0,
          "reason": null,
          "status": "skipped",
        },
        "gate": {
          "discardedCount": 7,
          "inputCount": 20,
          "outputCount": 13,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 104,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 167,
          "inputCount": 190,
          "outputCount": 23,
          "reason": null,
          "status": "ok",
        },
        "render_adapter": {
          "discardedCount": null,
          "inputCount": 13,
          "outputCount": 13,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 1,
            },
            "cliente_perdido": {
              "output": 1,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 4509,
              "output": 75,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_combo": {
              "output": 34,
            },
            "meta_gap_temporal": {
              "output": 2,
            },
            "migration": {
              "output": 0,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 194,
          "reason": null,
          "status": "ok",
        },
      },
      "summary": {
        "candidatesFiltered": 13,
        "candidatesRejectedByGate": 7,
        "candidatesReturned": 20,
        "chains": 0,
        "diagnosticBlocks": 13,
        "enrichedBlocks": 13,
        "executiveProblems": 0,
        "legacyBlocks": 0,
        "residualCandidates": 13,
      },
    },
  },
}
`;

exports[`insight-engine golden master (demo dataset, USD) > produces stable structural output for demo dataset 1`] = `
{
  "rows": [
    {
      "dimensionId": "cliente",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 819,
      "insightTypeId": "cliente_perdido",
      "member": "Tienda El Progreso",
      "metricId": "dias_sin_compra",
      "rank": 1,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "ALTA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "cliente",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 1633,
      "insightTypeId": "cliente_dormido",
      "member": "Supermercado López",
      "metricId": "dias_sin_compra",
      "rank": 2,
      "root_problem_key": null,
      "scoreRounded": 0.75,
      "severity": "MEDIA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 28994,
      "insightTypeId": "meta_gap_temporal",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 3,
      "root_problem_key": null,
      "scoreRounded": 0.2694,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 16868,
      "insightTypeId": "meta_gap_temporal",
      "member": "Miguel Ángel Díaz",
      "metricId": "cumplimiento_meta",
      "rank": 4,
      "root_problem_key": null,
      "scoreRounded": 0.2119,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "categoria",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Lácteos",
      "metricId": "cumplimiento_meta",
      "rank": 5,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "María Castillo",
      "metricId": "cumplimiento_meta",
      "rank": 6,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Patricia Vásquez",
      "metricId": "cumplimiento_meta",
      "rank": 7,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "producto",
      "direction": "neutral",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 15842,
      "insightTypeId": "stock_excess",
      "member": "Cacahuates 100g",
      "metricId": "inventario",
      "rank": 8,
      "root_problem_key": null,
      "scoreRounded": 0.7,
      "severity": "MEDIA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 5708,
      "insightTypeId": "product_dead",
      "member": "Chicharrón 120g",
      "metricId": "venta",
      "rank": 9,
      "root_problem_key": null,
      "scoreRounded": 0.6,
      "severity": "MEDIA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 5708,
      "insightTypeId": "co_decline",
      "member": "Palomitas 80g",
      "metricId": "venta",
      "rank": 10,
      "root_problem_key": null,
      "scoreRounded": 0.1142,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 25355,
      "insightTypeId": "stock_risk",
      "member": "Queso Fresco 400g",
      "metricId": "inventario",
      "rank": 11,
      "root_problem_key": null,
      "scoreRounded": 0.4,
      "severity": "BAJA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.54,
      "impactoValorRounded": 639,
      "insightTypeId": "migration",
      "member": "Super Económico",
      "metricId": "venta",
      "rank": 12,
      "root_problem_key": null,
      "scoreRounded": 0.2796,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.69,
      "impactoValorRounded": 46,
      "insightTypeId": "migration",
      "member": "Tienda El Carmen",
      "metricId": "num_transacciones",
      "rank": 13,
      "root_problem_key": null,
      "scoreRounded": 0.2659,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "departamento",
      "direction": "neutral",
      "hasAction": false,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "cross_delta",
      "member": "Santa Ana",
      "metricId": "venta",
      "rank": 14,
      "root_problem_key": null,
      "scoreRounded": 0.3807,
      "severity": "BAJA",
      "time_scope": "unknown",
    },
  ],
  "summary": {
    "datasetSize": {
      "inventory": 20,
      "metas": 2340,
      "sales": 94838,
    },
    "engineStatus": {
      "candidatesSelected": 20,
      "candidatesTotal": 319,
      "detectorsEmitted": {
        "change_point": 68,
        "correlation": 0,
        "meta_gap_temporal": 3,
        "motor1": 118,
        "outlier_builder": 4,
        "steady_share": 4,
        "z9_hydration": 23,
      },
      "origins": {
        "cross_engine": 1,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 110,
        "special_builder": 208,
        "unknown": 0,
      },
      "rankerAudit": {
        "portfolioPreview": [
          {
            "currentRank": 1,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
            "portfolioRank": 1,
            "portfolioScore": 0.603,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 2,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Miguel Ángel Díaz",
            "portfolioRank": 7,
            "portfolioScore": 0.469,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 3,
            "id": "special_builder:meta_gap:categoria:cumplimiento_meta:Lácteos",
            "portfolioRank": 3,
            "portfolioScore": 0.496,
            "reasons": [
              "economic_impact",
              "high_confidence",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 4,
            "id": "special_builder:meta_gap:categoria:cumplimiento_meta:Limpieza",
            "portfolioRank": 4,
            "portfolioScore": 0.485,
            "reasons": [
              "economic_impact",
              "high_confidence",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 5,
            "id": "special_builder:meta_gap:supervisor:cumplimiento_meta:Patricia Ruiz",
            "portfolioRank": 11,
            "portfolioScore": 0.415,
            "reasons": [
              "economic_impact",
              "high_confidence",
              "actionable",
              "causal_context",
            ],
          },
        ],
        "protectedCount": 17,
        "regularCap": 6,
        "regularCount": 181,
        "regularSelected": 6,
        "selectedByOrigin": {
          "cross_engine": 0,
          "executive_compression": 0,
          "legacy_render_adapter": 0,
          "motor1_legacy": 0,
          "motor2_registry_loop": 3,
          "special_builder": 17,
          "unknown": 0,
        },
      },
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 116,
          "inputCount": 319,
          "outputCount": 203,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 110,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 180,
          "inputCount": 203,
          "outputCount": 23,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 1,
            },
            "cliente_perdido": {
              "output": 1,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 4509,
              "output": 75,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_combo": {
              "output": 47,
            },
            "meta_gap_temporal": {
              "output": 3,
            },
            "migration": {
              "output": 1,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 209,
          "reason": null,
          "status": "ok",
        },
      },
    },
    "poolAfterFilter": {
      "byDimension": {
        "categoria": 1,
        "cliente": 4,
        "departamento": 1,
        "producto": 4,
        "vendedor": 4,
      },
      "byInsightType": {
        "cliente_dormido": 1,
        "cliente_perdido": 1,
        "co_decline": 1,
        "cross_delta": 1,
        "meta_gap": 3,
        "meta_gap_temporal": 2,
        "migration": 2,
        "product_dead": 1,
        "stock_excess": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 4,
        "BAJA": 7,
        "MEDIA": 3,
      },
      "passRate": 0.7,
      "total": 14,
    },
    "poolReturnedByEngine": {
      "byDimension": {
        "canal": 1,
        "categoria": 3,
        "cliente": 5,
        "departamento": 2,
        "producto": 4,
        "supervisor": 1,
        "vendedor": 4,
      },
      "byInsightType": {
        "cliente_dormido": 1,
        "cliente_perdido": 1,
        "co_decline": 1,
        "contribution": 1,
        "cross_delta": 2,
        "meta_gap": 6,
        "meta_gap_temporal": 2,
        "migration": 2,
        "outlier": 1,
        "product_dead": 1,
        "stock_excess": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 7,
        "BAJA": 7,
        "CRITICA": 1,
        "MEDIA": 5,
      },
      "total": 20,
    },
    "runtimeAudit": {
      "origins": {
        "cross_engine": 0,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 3,
        "special_builder": 17,
        "unknown": 0,
      },
      "portfolioPreview": [
        {
          "currentRank": 1,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
          "portfolioRank": 1,
          "portfolioScore": 0.603,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 2,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Miguel Ángel Díaz",
          "portfolioRank": 7,
          "portfolioScore": 0.469,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 3,
          "id": "special_builder:meta_gap:categoria:cumplimiento_meta:Lácteos",
          "portfolioRank": 3,
          "portfolioScore": 0.496,
          "reasons": [
            "economic_impact",
            "high_confidence",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 4,
          "id": "special_builder:meta_gap:categoria:cumplimiento_meta:Limpieza",
          "portfolioRank": 4,
          "portfolioScore": 0.485,
          "reasons": [
            "economic_impact",
            "high_confidence",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 5,
          "id": "special_builder:meta_gap:supervisor:cumplimiento_meta:Patricia Ruiz",
          "portfolioRank": 11,
          "portfolioScore": 0.415,
          "reasons": [
            "economic_impact",
            "high_confidence",
            "actionable",
            "causal_context",
          ],
        },
      ],
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 116,
          "inputCount": 319,
          "outputCount": 203,
          "reason": null,
          "status": "ok",
        },
        "executive_compression": {
          "discardedCount": null,
          "inputCount": 14,
          "outputCount": 0,
          "reason": null,
          "status": "skipped",
        },
        "gate": {
          "discardedCount": 6,
          "inputCount": 20,
          "outputCount": 14,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 110,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 180,
          "inputCount": 203,
          "outputCount": 23,
          "reason": null,
          "status": "ok",
        },
        "render_adapter": {
          "discardedCount": null,
          "inputCount": 14,
          "outputCount": 14,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 1,
            },
            "cliente_perdido": {
              "output": 1,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 4509,
              "output": 75,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_combo": {
              "output": 47,
            },
            "meta_gap_temporal": {
              "output": 3,
            },
            "migration": {
              "output": 1,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 209,
          "reason": null,
          "status": "ok",
        },
      },
      "summary": {
        "candidatesFiltered": 14,
        "candidatesRejectedByGate": 6,
        "candidatesReturned": 20,
        "chains": 0,
        "diagnosticBlocks": 14,
        "enrichedBlocks": 14,
        "executiveProblems": 0,
        "legacyBlocks": 0,
        "residualCandidates": 14,
      },
    },
  },
}
`;
